-Scrollbars and corrected footer
Removed permanent scrollbars from the textareas, put the footer back at the foot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-.jumbotron {
+.jumbotron, div.container-fluid, div.row {
     padding: 0px;
+	margin: 0px;
 }
 
 header a, footer a {
@@ -7,10 +8,10 @@ header a, footer a {
     text-decoration: none;
 }
 
-    header a:hover, footer a:hover {
-        color: #1F669C;
-        text-decoration: none;
-    }
+header a:hover, footer a:hover {
+	color: #1F669C;
+	text-decoration: none;
+}
 
 h1 span {
     color: #1F669C;
@@ -32,7 +33,13 @@ header #title  {
 header h1 {
 	margin: 0px;
 }
+#settings {
+	margin-top: 5px;
+}
 
+div.row {
+	width:100%;
+}
 header pre {
     background-color: transparent;
     border: 0px;
@@ -43,17 +50,29 @@ header pre {
 
 html, body {
     height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
     
 .fixed-width {
     font-family: courier new, monospace;
 }
 
+#main {
+    min-height: 100%;
+    padding: 0 0 60px;
+    position: relative;
+}	
 footer {
     margin-top: 30px;
     height: 60px;
     padding-top: 20px;
     color: inherit;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 header, footer {
@@ -64,10 +83,9 @@ abbr[title] {
     border-bottom: 1px dotted #eee;
 }
 
-textarea
-{
-    overflow-x:scroll;
-    overflow-y:scroll;
+textarea, .well {
+	margin-top:10px;
+	margin-bottom:5px;
 }
 
 #auto-format
